--- a/events.html
+++ b/events.html
@@ -7,14 +7,14 @@
     <title>Events</title>
     <style>
         .container{
-            max-width: 1300px;
+            max-width: 1000px;
             margin: auto;
-            background: #f2f2f2;
+            /* background: #f2f2f2; */
             overflow: auto;
 
         }
         .go{
-            margin: 5px;
+            margin: 4%;
             border: 1px solid #ccc;
             float: left;
             width: 390px;
@@ -26,14 +26,20 @@
 
         }
         .desc{
-            padding: 15px;
-            text-align: center;
-        }
+    background-color: #eef;
+    height: 1.6rem;
+    border: 1px solid black;
+}
+        
+@media (max-width:500px){
+    .go {
+        width: 350px;
+    } }
         
     </style>
     <link rel="stylesheet" href="style.css">
 </head>
-<body style="background-color: orange;">    
+<body style="background-color:rgb(87, 249, 222);">    
          <nav class="nit">
     <div class="bar">
         <a href="index.html">Home</a>
