--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <link rel="stylesheet" href="style.css">
         <style>
             body{
-                background-image: url(image1.png);
+                background-image: url(images/image1.png);
                 background-size:cover;
                 overflow: hidden;
             }
