--- a/events.html
+++ b/events.html
@@ -54,7 +54,7 @@
 
     <div class="go">
         <img src="images/giga.jpg">
-        <div class="desc"> PIKACHU DEFEAT CHARIZARD</div>
+        <div class="desc"> PIKACHU DEFEATS CHARIZARD</div>
     
 
         
